refacto protection endpoints admin